reworked deprecated java.net.URL code